--- a/app/assets/stylesheets/_milestones.scss.erb
+++ b/app/assets/stylesheets/_milestones.scss.erb
@@ -166,7 +166,7 @@ body.milestones {
             .time {
                 font-size: 10px;
                 float: right;
-                padding-right: 30px;
+                margin-right: -10px;
                 line-height: 2;
             }
 
