--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -5,7 +5,7 @@
 @import "jquery-ui/autocomplete";
 @import "bootstrap-datepicker.standalone";
 @import "chosen/chosen.min";
-
+@import "awesome-bootstrap-checkbox";
 
 $turqoise: #169F85;
 $peterriver: #2980B8;
@@ -54,6 +54,7 @@ body {
 @import "dashboard";
 @import "projects";
 @import "objectives";
+@import "collections";
 
 
 .tt-hint {
