--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -28,7 +28,7 @@
                 </td>
 
                 <td>
-                  <ul>
+                  <ul class="list-inline">
                   <% m.collection_templates.each do |c| %>
                         <% if c.days %>
                             <li><%= "#{c.template.title} (#{c.days})" %></li>
