--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -28,7 +28,7 @@
           <%=t('notes.header')%>
         </h4>
         <hr>
-        <%= render 'notes/form' %>
+        <%= render 'notes/form' , n: nil%>
         <%= render 'notes' %>
       </div>
 
