--- a/app/assets/stylesheets/_dashboard.scss.erb
+++ b/app/assets/stylesheets/_dashboard.scss.erb
@@ -25,8 +25,31 @@
     min-height: 90px;
     color: white;
 
-    tr:hover{
-        background-color: #169F85;
+    table {
+        tr:hover{
+            background-color: #169F85;
+        }
+
+
+        li {
+            background-color: #E05956;
+            display: block;
+            float: left;
+            margin-left: 7px;
+            padding: 4px 5px;
+            color: white;
+
+            -moz-border-radius: 5px;
+            border-radius: 5px;
+        }
+
+        li a {
+            color: white;
+        }
+
+        a {
+            color:white;
+        }
     }
 
     h1 {
@@ -35,26 +58,6 @@
 
     input {
         background-color: #1ABB9B;
-    }
-
-    li {
-        background-color: #E05956;
-        display: block;
-        float: left;
-        margin-left: 7px;
-        padding: 4px 5px;
-        color: white;
-
-        -moz-border-radius: 5px;
-        border-radius: 5px;
-    }
-
-    li a {
-        color: white;
-    }
-
-    a {
-        color:white;
     }
 
     .datatable {
@@ -72,6 +75,29 @@
         padding: 10px 10px;
         font-size:14px;
         font-weight: normal;
+    }
+
+    .pagination {
+
+        a {
+            border-color: #137760;;
+            background-color: #169f85;
+            color:white;
+        }
+
+        .next a, .previous a {
+
+        }
+
+        .disabled a {
+            color: #7e9e98;
+        }
+
+        .active a {
+            background-color: #ffffff;
+            color: #169f85;
+        }
+
     }
 
 }
