--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -145,6 +145,10 @@
         color: #19c8ab;
         top:15px;
         right: 23px;
+
+        &:hover {
+            color: white;
+        }
     }
 
     li {
