--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -20,7 +20,7 @@
             <%= f.select :status, options_for_select(Project.status_names_for_select) %>
         </div>
 
-          <div class="form-group col-xs-12">
+          <div class="form-group">
             <%= f.label t('project.technologies.title'), class: "control-label" %>
             <%= selected_technologies(@project) %>
           </div>
