--- a/app/views/templates/_generate.html.erb
+++ b/app/views/templates/_generate.html.erb
@@ -18,7 +18,7 @@
 
           <label><%=t('templates.select')%></label>
           <br>
-          <select name="template_id" class="chzn-select category" style="width:100%" >
+          <select name="template_id" class="chzn-select category full-width" >
             <%@temps.each do |t|%>
                 <option value=<%=t.id%> ><%=t.title%></option>
             <%end%>
