--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -490,6 +490,7 @@ ul#milestone-list {
                 font-size: 10px;
                 width: 40px;
                 padding: 0;
+                border-radius: 0 4px 4px 0;
             }
 
         }
