--- a/app/assets/stylesheets/_milestones.scss.erb
+++ b/app/assets/stylesheets/_milestones.scss.erb
@@ -303,8 +303,8 @@ body.milestones {
         /*max-width: 191px;*/
 
 
-        float: left;
-        margin: 0px;
+        float: right;
+        margin-right: 30px;
 
         li {
             position: relative;
