--- a/app/assets/stylesheets/_tables.scss.erb
+++ b/app/assets/stylesheets/_tables.scss.erb
@@ -125,6 +125,10 @@
     margin: 15px 15px 0 0;
 }
 
+.dataTables_paginate {
+    text-align: center;
+}
+
 .pagination {
     li a {
         color: $alizarin;
