--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -17,7 +17,7 @@
 
           <div class="form-group">
               <%= f.label t('project.status') %>
-              <%= f.select :status, options_for_select(Project.status_names_for_select) %>
+              <%= f.select :status, options_for_select(Project.status_names_for_select), {}, {class:"chosen full-width"} %>
           </div>
 
           <div class="form-group">
