--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -28,7 +28,14 @@
           <tbody>
           <% @skills.each do |t| %>
               <tr>
-                <td><%= cl_image_tag t.icon %></td>
+                <%if t.icon %>
+                    <td><%= cl_image_tag t.icon %></td>
+                <%else%>
+                    <td>
+                      <% cl_image_tag 'zkcotcwo3uvosunynfqo.png' %>
+                      <img src="http://res.cloudinary.com/hx9jq2ajv/image/upload/xhju4mvhp4acbjok01ld.png" style="width: 32px;height: 32px;">
+                    </td>
+                <%end%>
                 <td><%= t.name %></td>
      
                 <td>
